# xpathplugin

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap.sh  configure.ac  doxygen.cfg
examples/: Makefile.am  keywords.hex.in  nobelprice.hex.in  scientists.hex.in  scientists.xml  scientists_err.xml
examples/tests/: keywords.out  nobelprice.out  xpath.test
include/: Makefile.am  myerrorhandler.hpp  xpathatom.hpp  xpathplugin.hpp
src/: Makefile.am  myerrorhandler.cpp  xpathatom.cpp  xpathatom.hpp  xpathplugin.cpp  xpathplugin.hpp
testsuite/: Makefile.am  keywords.hex  nobelprice.hex  run-dlvhex-tests.sh  scientists.hex  scientists.out  xpath-unittest.cpp  xpath.test
testsuite/tests/: run-dlvhex-tests.sh  xpath.test
